--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-	# Ignore list for Eagle, a PCB layout tool
-
+# Ignore list for Eagle, a PCB layout tool
 # Backup files
 *.s#?
 *.b#?
@@ -49,3 +48,6 @@ eagle.epf
 
 # file locks introduced since 7.x
 *.lck
+
+# ignore zip files
+*.zip
